dia 12 challenge finalizado

--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,15 @@
 </head>
 <body>
 <script>
+const pressed = [];
+const sCode = 'legal';
+window.addEventListener('keyup', (evt) => {
+  pressed.push(evt.key);
+  pressed.splice(-sCode.length -1, pressed.length - sCode.length );
+  if(pressed.join('').includes(sCode)){
+    cornify_add();
+  }
+});
 </script>
 </body>
 </html>
